# OctbitEngine

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Common.cmake  NOTE.md  README.md  ThirdParty.cmake
Source/Application/: CMakeLists.txt
Source/Application/Public/Application/: Application.h  Source.cpp
Source/Application/Source/: Application.h  BuildinRenderPipeline.h  MaterialTest.cpp  Model.h  Source.cpp  Tool.cpp
Source/Framework/Core/: CMakeLists.txt
Source/Framework/Core/Misc/: Core.md  Core.natvis  DI.md  Log.md  Reflection.md  String.md  Template.md
Source/Framework/Engine/: CMakeLists.txt
Source/Framework/Engine/Misc/: Engine.md  Engine.natvis  Module.md  Reflection.md  Scene.md
Source/Framework/Graphic/: CMakeLists.txt
Source/Framework/Graphic/Misc/: Graphic.md  Material.md  RenderPipeline.md
Source/Framework/Model/: CMakeLists.txt
Source/Framework/Model/Misc/: Model.md
Source/Framework/RHI/: CMakeLists.txt
Source/Framework/RHI/Misc/: RHI.md  RHI.natvis
Source/Framework/Singleton/: CMakeLists.txt
Source/Plugins/DirectX12RHI/: CMakeLists.txt
Source/Plugins/GraphicDirectX12/: CMakeLists.txt
Source/Plugins/ImGui/: CMakeLists.txt
Source/Plugins/VulkanRHI/: CMakeLists.txt
Source/Public/Framework/Singleton/: CMakeLists.txt  Singleton.h
Source/Test/Framework/Platform/: CMakeLists.txt
Source/Test/Framework/RHI/: CMakeLists.txt
Sources/Application/: CMakeLists.txt  Source.cpp
Sources/Application/PCH/: stdafx.h
Sources/Application/Sources/: Source.cpp
Sources/Framework/Core/: CMakeLists.txt  Core.md  Core.natvis  CorePrivate.h  CoreTypes.h
Sources/Framework/Core/Allocator/: Heap.cpp  Heap.h  HeapMethodType.h  MimallocHeap.cpp  MimallocHeap.h  TLSFHeap.cpp  TLSFHeap.h
Sources/Framework/Core/Curve/: Spline.h  Spline2D.cpp  Spline2D.h
Sources/Framework/Core/Exception/: Exception.cpp  Exception.h
Sources/Framework/Core/File/: BinaryReader.cpp  BinaryReader.h  BinaryWriter.h  BlobStream.cpp  ByteOrder.h  File.h  FileStream.cpp  FileStream.h  FileTypes.h  Path.h  Stream.h
Sources/Framework/Core/Geometory/: Box.cpp  Box.h  Capsule.h  Circle.h  Cylinder.h  Frustum.h  HalfLine.h  IntRect.h  Line.h  Margin.h  Plane.h  Point.h  Primitive.h  Ray.h  Rect.cpp  Rect.h  Segment.h  Size.h  Sphere.cpp  Sphere.h  Spline2D.cpp  Triangle.h  Viewport.h
Sources/Framework/Core/Graphic/: Bitmap.h  Color.cpp  Color.h  ColorTypes.h  HSV.cpp  HSV.h  IntColor.cpp  IntColor.h
Sources/Framework/Core/HAL/: Platform.h
Sources/Framework/Core/Hash/: Hash.h  crc32.h
Sources/Framework/Core/Log/: Assertion.h  ILogEvent.h  LogMacro.h  LogType.h  LogTypes.h  Logger.cpp  Logger.h
Sources/Framework/Core/Manager/: ManagerBase.hpp
Sources/Framework/Core/Math/: Affine.cpp  Affine.h  Axis.h  BitOp.h  Easing.h  FloatCompression.cpp  FloatCompression.h  IntVector2.h  IntVector3.h  IntVector4.h  IntVectors.cpp  Math.cpp  Math.h  Mathf.cpp  Mathf.h  Matrix.cpp  Matrix.h  Periodic.h  Quaternion.cpp  Quaternion.h  Random.cpp  Random.h  Range.h  Rotation.cpp  Rotation.h  Rotator.h  Transform.cpp  Transform.h  Vector2.h  Vector3.h  Vector4.h  Vectors.cpp  Vectors.h
Sources/Framework/Core/Misc/: Blob.h  BlobView.h  CRCHash.cpp  CRCHash.h  Compression.h  DataTime.cpp  DataTime.h  DateTime.cpp  DateTime.h  Duration.cpp  Duration.h  Noise.cpp  Noise.h  TimeSpan.cpp  TimeSpan.h  Transition.cpp  Transition.h  UUID.cpp  UUID.h  YesNo.h
Sources/Framework/Core/PCH/: stdafx.h
Sources/Framework/Core/Platform/: WindowsHeaders.h
Sources/Framework/Core/String/: Format.h  String.h  StringEncoder.cpp  StringEncoder.h
Sources/Framework/Core/Template/: Memory.h  STLAllocator.cpp  Template.md  Utility.h  include.h
Sources/Framework/Core/Thread/: Mutex.cpp  Mutex.h  ScopeLock.h  SpinLock.cpp  SpinLock.h  Thread.cpp  Thread.h
Sources/Framework/Core/Type/: Point.h  Rect.h
Sources/Framework/Core/Utility/: ConstValue.h  Indexed.h  MemoryStorage.h  Noncopyable.h  Nonmovable.h  Pimpl.h  Scope.h  Swapper.h  Transition.cpp  Transition.h
Sources/Framework/Input/: Button.cpp  Button.h  CMakeLists.txt  Gamepad.h  IInputDevice.h  Input.cpp  Input.h  Input.md  InputManager.cpp  InputManager.h  InputType.h  Key.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Sources/Framework/Input/Device/: KeyboardDevice.h
Sources/Framework/Input/Interface/: IInputDevice.h  IInputHandler.h
Sources/Framework/Input/Private/: DirectInputDevice.cpp  DirectInputDevice.h  KeyboardDevice.cpp  KeyboardDevice.h  KeyboardImpl.cpp  KeyboardImpl.h  MouseDevice.cpp  MouseDevice.h  MouseImpl.cpp  MouseImpl.h
Sources/Framework/Input/Type/: InputType.h
Sources/Framework/Platform/: CMakeLists.txt  README.md
Sources/Framework/Platform/Arguments/: Arguments.cpp  Arguments.h
Sources/Framework/Platform/Module/: IModule.h  Module.cpp  Module.h  ModuleManager.cpp  ModuleManager.h
Sources/Framework/Platform/Public/: Arguments.h
Sources/Framework/Platform/System/: PlatformSystem.cpp  PlatformSystem.h
Sources/Framework/Platform/Type/: Language.h  SystemEventType.h  TimeType.h  WindowCreationParams.h
Sources/Framework/Platform/Window/: Window.cpp  Window.h  WindowNativaAccessor.h  WindowNativeAccessor.cpp  WindowNativeAccessor.h  WindowState.h
Sources/Framework/Singleton/: CMakeLists.txt  Singleton.cpp  Singleton.h
Sources/Framework/Singleton/PCH/: stdafx.h
Sources/Plugins/GraphicDirectX12/: CMakeLists.txt
Sources/Plugins/GraphicDirectX12/Buffer/: BufferImpl.cpp  BufferImpl.h  BufferUpdater.h
Sources/Plugins/GraphicDirectX12/Command/: CommandListImpl.cpp  CommandListImpl.h  CommandQueue.cpp  CommandQueue.h
Sources/Plugins/GraphicDirectX12/CommandList/: CommandListImpl.h
Sources/Plugins/GraphicDirectX12/CommandQueue/: CommandQueueImpl.h
Sources/Plugins/GraphicVulkan/: CMakeLists.txt
src/Application/: CMakeLists.txt  main.cpp
src/Application/Sources/: Source.cpp
src/Editor/: CMakeLists.txt
src/Runtime/Foundation/: CMakeLists.txt  Foundation.h
src/Runtime/Graphic/: CMakeLists.txt
src/Runtime/GraphicD3D12/: CMakeLists.txt  stdafx.h
src/Runtime/Platform/: CMakeLists.txt
(+1930 files in other folders)
